type your message here

--- a/week4_in-class_exercise.ipynb
+++ b/week4_in-class_exercise.ipynb
@@ -2968,6 +2968,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0b907aed-fd3c-4c20-892e-eb3fac2d617e",
+   "metadata": {},
+   "source": [
+    "Line: The data goes up and down. From 4/4/2023 21:25 to 4/2/2023 18:17 and 4/4/2023 11:58 to 4/4/2023 12:51, the students learned the most knowledge.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "dff0dacd-dfad-459d-b4b4-14d4fde80ebf",
    "metadata": {},
    "source": [
