type your message here

--- a/week4_in-class_exercise.ipynb
+++ b/week4_in-class_exercise.ipynb
@@ -2971,7 +2971,9 @@
    "id": "0b907aed-fd3c-4c20-892e-eb3fac2d617e",
    "metadata": {},
    "source": [
-    "Line: The data goes up and down. From 4/4/2023 21:25 to 4/2/2023 18:17 and 4/4/2023 11:58 to 4/4/2023 12:51, the students learned the most knowledge.\n"
+    "Line: The data goes up and down. From 4/4/2023 21:25 to 4/2/2023 18:17 and 4/4/2023 11:58 to 4/4/2023 12:51, the students learned the most knowledge.\n",
+    "\n",
+    "Bar: Most students fall into the category of 1 point scale of data science knowledge. Students who rate themselves as having a 2 or 3-point scale of data science knowledge, typically have more reproducible knowledge of research principles.\n"
    ]
   },
   {
