type your message here

--- a/week4_in-class_exercise.ipynb
+++ b/week4_in-class_exercise.ipynb
@@ -2972,7 +2972,7 @@
    "metadata": {},
    "source": [
     "Line: The data goes up and down. From 4/4/2023 21:25 to 4/2/2023 18:17 and 4/4/2023 11:58 to 4/4/2023 12:51, the students learned the most knowledge.\n",
-    "\n",
+    "Scatter: Most students rate themselves as 1 in data science knowledge, the second most frequent score is 2, and only a few students rate themselves 3. There seems to be no correlation between the time and data science knowledge because the points are all scattered out with no distinct pattern.\n",
     "Bar: Most students fall into the category of 1 point scale of data science knowledge. Students who rate themselves as having a 2 or 3-point scale of data science knowledge, typically have more reproducible knowledge of research principles.\n"
    ]
   },
